[gd_scene load_steps=12 format=3 uid="uid://6210c1tsekh1"]

[ext_resource type="Script" path="res://scripts/menu_de_opciones.gd" id="1_oxv8y"]
[ext_resource type="Texture2D" uid="uid://ba3b6hcm4kt5d" path="res://recursos/fondos/background.png" id="2_gh64d"]
[ext_resource type="FontFile" uid="uid://cw20mwo8wpqyv" path="res://recursos/fonts/advanced_pixel-7.ttf" id="3_ryvrm"]
[ext_resource type="PackedScene" uid="uid://dkvnfh7p51hao" path="res://escenas/Screens/UI/boton_salir.tscn" id="4_tiroo"]
[ext_resource type="PackedScene" uid="uid://c4rolhf24atu5" path="res://escenas/Screens/UI/boton_volver.tscn" id="5_142a2"]
[ext_resource type="AudioStream" uid="uid://bxxgksem1dg5a" path="res://recursos/fx/ClickPlastic.wav" id="6_edu8n"]
[ext_resource type="AudioStream" uid="uid://dhreg0mdua0xy" path="res://recursos/musica/background.ogg" id="7_wr6dq"]

[sub_resource type="LabelSettings" id="LabelSettings_alrto"]
font = ExtResource("3_ryvrm")
font_size = 40
font_color = Color(1, 0.243137, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0p8i7"]
font = ExtResource("3_ryvrm")
font_size = 30
font_color = Color(1, 0.243137, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qghey"]
font = ExtResource("3_ryvrm")
font_size = 30
font_color = Color(1, 0.243137, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_il1ss"]
font = ExtResource("3_ryvrm")
font_size = 30
font_color = Color(1, 0.243137, 1, 1)

[node name="menuDeOpciones" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oxv8y")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 288.0
offset_bottom = 512.0
texture = ExtResource("2_gh64d")

[node name="titulo" type="Label" parent="."]
layout_mode = 0
offset_right = 288.0
offset_bottom = 40.0
text = "AUDIO"
label_settings = SubResource("LabelSettings_alrto")
horizontal_alignment = 1

[node name="GridVolumen" type="GridContainer" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 288.0
offset_bottom = 83.0
columns = 2

[node name="Lbl_Master_Vol" type="Label" parent="GridVolumen"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"
label_settings = SubResource("LabelSettings_0p8i7")

[node name="Slider_Master_Vol" type="HSlider" parent="GridVolumen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -80.0
max_value = 0.0
rounded = true

[node name="Lbl_Music_Vol" type="Label" parent="GridVolumen"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"
label_settings = SubResource("LabelSettings_qghey")

[node name="Slider_Music_Vol" type="HSlider" parent="GridVolumen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -80.0
max_value = 0.0

[node name="Lbl_SFX_vol" type="Label" parent="GridVolumen"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Vol"
label_settings = SubResource("LabelSettings_il1ss")

[node name="Slider_SFX_vol" type="HSlider" parent="GridVolumen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -80.0
max_value = 0.0

[node name="boton_salir" parent="." instance=ExtResource("4_tiroo")]
layout_mode = 0
offset_top = 272.0
offset_bottom = 336.0

[node name="boton_volver" parent="." instance=ExtResource("5_142a2")]
layout_mode = 0
offset_top = 192.0
offset_bottom = 256.0

[node name="AudioBoton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_edu8n")
bus = &"SFX"

[node name="AudioBackGround" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wr6dq")
bus = &"Music"

[connection signal="value_changed" from="GridVolumen/Slider_Master_Vol" to="." method="_on_slider_master_vol_value_changed"]
[connection signal="value_changed" from="GridVolumen/Slider_Music_Vol" to="." method="_on_slider_music_vol_value_changed"]
[connection signal="value_changed" from="GridVolumen/Slider_SFX_vol" to="." method="_on_slider_sfx_vol_value_changed"]
[connection signal="pressed" from="boton_salir/imagenBoton" to="." method="_on_salir_boton_pressed"]
[connection signal="pressed" from="boton_volver/imagenBoton" to="." method="_on_volver_boton_pressed"]

[editable path="boton_salir"]
[editable path="boton_volver"]
